add precon page

--- a/labs/precon.html
+++ b/labs/precon.html
@@ -56,97 +56,91 @@
         <aside>
             <div class="sticky-top">
                 <h5>Hours <span class="badge">24/7 Access</span></h5>
-                <dl>
-                    <dt>Monday - Friday</dt>
-                    <dd>7:30am - 8:30pm</dd>
-
-                    <dt>Saturday and Sunday</dt>
-                    <dd>10:30am - 4:30pm</dd>
-
-                    <dt>Stadium Game Days</dt>
-                    <dd>Closed</dd>
-                </dl>
+                <p class="mt-0">No Staff</p>
 
                 <h5>Contact</h5>
                 <dl>
                     <dt>Lab Op Desk</dt>
-                    <dd>491-6547</dd>
+                    <dd>491-4658</dd>
 
                     <dt>Senior Lab Op</dt>
-                    <dd><a href="mailto:jack.hermanson@colostate.edu">Jack Hermanson</a></dd>
+                    <dd><a href="mailto:joshjosh@mail.colostate.edu">Josh Anderson</a></dd>
                 </dl>
             </div>
         </aside>
         <main>
-            <h2>RDC 104</h2>
-            <p>Welcome to the RDC 104 computer lab.
-                Located on the first floor of the <a href="https://www.chhs.colostate.edu/rdc/" target="_blank">Nancy
-                    Richardson Design Center</a> at 522 W Lake St, directly east of the Stadium, this lab serves
-                students in Apparel Merchandising, Interior Architecture and Design, and
-                <a href="https://catalog.colostate.edu/general-catalog/courses-az/idea/" target="_blank">IDEA</a>
-                programs.</p>
-            <img src="../images/rdc.jpg" alt="The RDC 104 lab, with black flat-screen monitors protruding from white desks and two large TVs hanging from the ceiling">
-            <p class="caption">The RDC 104 lab has 87 computers available to students and a teacher podium with a
-                projector screen.</p>
+            <h2 class="mb-1">Precon 200</h2>
+            <div class="alert">
+                <p>Due to continued noncompliance with University and Larimer County mask requirements,
+                the Precon 200 lab has removed all staff and required each user to scan in with a CSU ID.</p>
+            </div>
+            <p>Welcome to the Precon 200 computer lab.
+                Located on the second floor of the Preconstruction Center at 251 W Laurel St,
+                north of the Oval and directly south of the Rainbow Café, this lab serves
+                Construction Management and Interior Archiecture and Design
+                majors.</p>
+            <img src="../images/precon.jpg" alt="The Precon 200 lab, with students working on computers in rows of 4 in front of a switched-off projector screen in a wood-panel room with windows">
+            <p class="caption">The Precon 200 lab has 95 computers available to students and 2 teacher podiums with
+                projector screens.</p>
 
             <h4>Reservations</h4>
-            <p>The RDC 104 lab is reserved for classes during the following times:</p>
+            <p>The Precon 200 lab is reserved for classes during the following times:</p>
             <ul>
-                <li>Monday: 8:00am-9:50am, 10:00am-10:50am, 12:00pm-12:50pm, 3:00pm-3:50pm, 4:00pm-4:50pm</li>
-                <li>Tuesday: 12:00pm-12:50pm, 2:00pm-3:40pm, 4:00pm-5:50pm</li>
-                <li>Wednesday: 8:00am-9:50am, 10:00am-10:50am, 12:00pm-12:50pm, 3:00pm-3:50pm, 4:00pm-4:50pm</li>
-                <li>Thursday: 11:00am-12:15pm, 2:00pm-3:40pm</li>
-                <li>Friday: 8:00am-9:50am, 10:00am-11:50am</li>
+                <li>Tuesday: 8:00am-9:00am, 9:00am-10:40am, 12:00pm-1:00pm, 1:00pm-2:40pm</li>
+                <li>Wednesday: 8:00am-9:40am, 10:00am-11:40am, 12:00pm-1:40pm, 2:00-3:40pm</li>
+                <li>Thursday: 8:00am-9:40am, 10:00am-11:40am, 12:00pm-1:40pm, 2:00-3:40pm, 4:00pm-6:50pm</li>
+                <li>Friday: 8:00am-9:40am, 10:00am-11:40am, 12:00pm-1:40pm, 2:00-3:40pm</li>
             </ul>
 
             <h4>Hardware</h4>
-            <p>The RDC 104 lab has a color printer, a black and white printer, and a plotter.
-                The computers in the front lab are HP Z2 G4 workstations equipped with 16GB of RAM.
-                The computers in the back lab are HP Z4 G4 workstations equipped with 32GB of RAM.
+            <p>The Precon 200 lab has a color printer, 2 black and white printers, and a plotter.
+                The computers are HP Z2 Mini workstations equipped with 8GB of RAM.
             </p>
 
             <h4>Software</h4>
-            <p>The following software is available in the Gifford 317 lab:</p>
+            <p>The following software is available in the Precon 200 lab:</p>
             <ul>
                 <li>
-                    Adobe Creative Cloud Suite
-                    <ul>
-                        <li>Acrobat</li>
-                        <li>Photoshop</li>
-                        <li>Illustrator</li>
-                        <li>InDesign</li>
-                    </ul>
+                    Adobe Acrobat Reader (PDF Viewer)
                 </li>
+                <li>Arduino</li>
                 <li>Audacity</li>
                 <li>
-                    Autodesk 2020
+                    Autodesk 2022
                     <ul>
                         <li>3DS Max</li>
                         <li>Architecture</li>
                         <li>Arnold</li>
                         <li>AutoCAD</li>
                         <li>Inventor</li>
+                        <li>Maya</li>
                         <li>NavisWorks</li>
                         <li>Revit</li>
+                        <li>ReCap</li>
+                        <li>Robot Structural Analysis</li>
                     </ul>
                 </li>
-                <li>CLO3D</li>
+                <li>Bluebeam eXtreme</li>
                 <li>EndNote</li>
-                <li>EnRoute</li>
                 <li>Enscape 3D</li>
-                <li>Meshmixer</li>
+                <li>Kurzweil</li>
+                <li>MATLAB</li>
                 <li>Microsoft Office</li>
                 <li>Microsoft Project</li>
                 <li>Microsoft Visio</li>
-                <li>Read&Write Gold</li>
-                <li>Rhino</li>
-                <li>Rstudio Desktop</li>
+                <li>OnScreen Takeoff</li>
+                <li>Powerproject (Asta)</li>
+                <li>PuTTY</li>
+                <li>R for Windows</li>
+                <li>RStudio Desktop</li>
                 <li>SketchUp Pro</li>
                 <li>SPSS, AMOS</li>
-                <li>Steam</li>
-                <li>Unity 3D</li>
-                <li>V-Ray</li>
+                <li>Unity 2021</li>
+                <li>Vico Office</li>
+                <li>VLC Player</li>
+                <li>VNC Viewer</li>
                 <li>WindowShades</li>
+                <li>Zotero</li>
             </ul>
 
         </main>
