--- a/labs/rdc.html
+++ b/labs/rdc.html
@@ -106,7 +106,7 @@
             </p>
 
             <h4>Software</h4>
-            <p>The following software is available in the Gifford 317 lab:</p>
+            <p>The following software is available in the RDC 104 lab:</p>
             <ul>
                 <li>
                     Adobe Creative Cloud Suite
@@ -140,7 +140,7 @@
                 <li>Microsoft Visio</li>
                 <li>Read&Write Gold</li>
                 <li>Rhino</li>
-                <li>Rstudio Desktop</li>
+                <li>RStudio Desktop</li>
                 <li>SketchUp Pro</li>
                 <li>SPSS, AMOS</li>
                 <li>Steam</li>
