--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CHHS Labs | Gifford 317</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
 <div id="wrapper">
