--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -56,9 +56,26 @@
     <div id="content">
         <aside>
             <h5>Articles</h5>
+            <ul>
+                <li>
+                    <a href="plotter.html">Using the Plotter</a>
+                </li>
+                <li>
+                    <a href="projector.html">Connecting to the Projector</a>
+                </li>
+                <li>
+                    <a href="refunds.html">Requesting a Refund</a>
+                </li>
+            </ul>
         </aside>
         <main>
             <h2>Tutorials</h2>
+            <p>Some of the things we do at CHHS labs require a bit of a learning curve.
+                We've provided the following tutorial articles to help our students. Please
+                <a href="../contact.html">contact us</a> to report errors or request
+                that more information be added.</p>
+            <img src="../images/tutorials/index-cooperation.jpg" alt="Two CHHS labs users work together on a computer, looking at pieces of furniture online" />
+            <p>So far, we've produced three tutorials. If you'd like to help us add to our list, please <a href="../contact.html">contact us</a>!</p>
         </main>
     </div>
     <footer>
