--- a/tutorials/plotter.html
+++ b/tutorials/plotter.html
@@ -2,9 +2,151 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CHHS Labs | Using the Plotter</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
+<div id="wrapper">
+    <a href="../index.html">
+        <header>
+            <img src="../images/logo.svg" alt="CHHS Labs Logo">
+            <h1>CHHS Computer Labs</h1>
+        </header>
+    </a>
+    <nav>
+        <ul class="main-nav">
+            <li>
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li>
+                <a class="nav-link" href="index.html">
+                    Labs
+                </a>
+                <span data-target="#labs-dropdown" class="dropdown-toggle text-white">&#x25BC;</span>
+                <div class="dropdown-content" id="labs-dropdown">
+                    <ul>
+                        <li>
+                            <a href="../labs/education.html">Education</a>
+                        </li>
+                        <li>
+                            <a href="../labs/gifford.html">Gifford</a>
+                        </li>
+                        <li>
+                            <a href="../labs/moby.html">Moby</a>
+                        </li>
+                        <li>
+                            <a href="../labs/precon.html">Precon</a>
+                        </li>
+                        <li>
+                            <a href="../labs/rdc.html">RDC</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <a class="nav-link" href="index.html">Tutorials</a>
+            </li>
+            <li>
+                <a class="nav-link" href="../contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="content">
+        <aside>
+            <div class="sticky-top">
+                <h5>Articles</h5>
+                <ul>
+                    <li>
+                        <a href="plotter.html">Using the Plotter</a>
+                    </li>
+                    <li>
+                        <a href="projector.html">Connecting to the Projector</a>
+                    </li>
+                    <li>
+                        <a href="refunds.html">Requesting a Refund</a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+        <main>
+            <h2>Using the Plotter</h2>
+            <p>This article shows how to use the plotter printer, step by step.</p>
+            <div id="tutorial">
+                <h4>Step 1</h4>
+                <div class="tutorial-item">
+                    <p>Identify the plotter. Make sure it is powered on by tapping the screen. If it wakes up, move onto
+                        step 2. Otherwise, push the power button, wait a few minutes, and try again.</p>
+                    <img src="../images/rdc-plotter.jpg" alt="The plotter, a large gray and black printer with a net">
+                </div>
 
+                <h4>Step 2</h4>
+                <div class="tutorial-item">
+                    <p>Open your PDF in Adobe Acrobat or Adobe Reader. If it asks you to sign in, use your
+                        ename@colostate.edu or another account. Adobe accounts are free.</p>
+                    <img src="../images/tutorials/plotter/1-acrobat.png" alt="Screenshot of Adobe Acrobat">
+                </div>
+
+                <h4>Step 3</h4>
+                <div class="tutorial-item">
+                    <p>Select the printer with the word "Plotter" in it from the menu.</p>
+                    <img src="../images/tutorials/plotter/2-select-printer.webp" alt="The Printer Selection menu">
+                </div>
+
+                <h4>Step 4</h4>
+                <div class="tutorial-item">
+                    <p>Click on the "Properties" button near the top of the window. A window that looks like this will
+                        open up. Once it does, click on the "Custom..." button.</p>
+                    <img src="../images/tutorials/plotter/3-properties.webp"
+                         alt="Click on the Custom button in the Properties window">
+                </div>
+
+                <h4>Step 5</h4>
+                <div class="tutorial-item">
+                    <p>After clicking the "Custom..." button, a window will pop up where you can entire your desired
+                        width and height. The width must not exceed 36 inches, which is the physical width
+                        of the plotter paper. When you're done, click OK, then close the Properties window.</p>
+                    <img src="../images/tutorials/plotter/4-custom-size.webp"
+                         alt="Enter a custom size in the pop up window">
+                </div>
+
+                <h4>Step 6</h4>
+                <div class="tutorial-item">
+                    <p>Once you've selected the correct size, drag the speed/quality slider to the middle of the
+                        scale.</p>
+                    <img src="../images/tutorials/plotter/5-quality-slider.webp"
+                         alt="Drag the slider to the middle between speed and quality">
+                </div>
+
+                <h4>Step 7</h4>
+                <div class="tutorial-item">
+                    <p>Depending on your needs, you may need to select a scaling option under "Paper Size &
+                        Handling". If you need your document to print to-scale, select the "Actual Size" radio button.
+                        Otherwise, select the "Fit" radio button. Once you've selected an option, click the "Print"
+                        button.</p>
+                    <img src="../images/tutorials/plotter/6-scale-print.webp"
+                         alt="The two main options for scaling are fit and actual size">
+                </div>
+
+                <h4>Step 8</h4>
+                <div class="tutorial-item">
+                    <p>A Papercut dialog box will appear and ask you to confirm the print job. Verify the cost and
+                        number of pages, then click the "Print" button.</p>
+                    <img src="../images/tutorials/plotter/7-papercut.webp"
+                         alt="A green Papercut window allows you to confirm the cost and number of pages before printing">
+                </div>
+
+                <h3 class="mb-1">That's it!</h3>
+                <p class="mt-0">We hope this tutorial helps. Please <a href="../contact.html">contact us</a> with
+                    feedback.</p>
+            </div>
+        </main>
+    </div>
+    <footer>
+        <p>Copyright &copy; 2021, CHHS Computer Labs</p>
+    </footer>
+</div>
+<script defer src="../scripts/dropdown.js"></script>
 </body>
 </html>
