start projector and refunds

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li>
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="../labs/index.html">
                     Labs
                 </a>
                 <span data-target="#labs-dropdown" class="dropdown-toggle text-white">&#x25BC;</span>
