add education picture

--- a/labs/education.html
+++ b/labs/education.html
@@ -81,9 +81,13 @@
         <main>
             <h2>Education 220</h2>
             <p>Welcome to the Education 220 computer lab.
-                Located on the second floor of the Education building at 450 W Pitkin St, directly west of the Behavioral Sciences Building, this lab serves students in the Education, Social Work, and Human Development and Family Studies majors.</p>
-            <p>[add pic of education]</p>
-            <p class="caption">The Education 220 lab has 43 computers available to students and a teacher podium with a projector screen.</p>
+                Located on the second floor of the Education building at 450 W Pitkin St, directly west of the
+                Behavioral Sciences Building, this lab serves students in the Education, Social Work, and Human
+                Development and Family Studies majors.</p>
+            <img src="../images/education.jpg"
+                 alt="The Education lab has several rows of black computers and black chairs on light brown desks in front of a white board under a blue sky mural">
+            <p class="caption">The Education 220 lab has 43 computers available to students and a teacher podium with a
+                projector screen.</p>
 
             <h4>Reservations</h4>
             <p>The Education 220 lab is reserved for classes during the following times:</p>
