--- a/tutorials/projector.html
+++ b/tutorials/projector.html
@@ -71,70 +71,40 @@
             </div>
         </aside>
         <main>
-            <h2>Using the Plotter</h2>
-            <p>This article shows how to use the plotter printer, step by step.</p>
+            <h2>Connecting to the Projector</h2>
+            <p>This article explains how to connect to the projector from the teacher podium computer.</p>
             <div id="tutorial">
                 <h4>Step 1</h4>
                 <div class="tutorial-item">
-                    <p>Identify the plotter. Make sure it is powered on by tapping the screen. If it wakes up, move onto
-                        step 2. Otherwise, push the power button, wait a few minutes, and try again.</p>
-                    <img src="../images/rdc-plotter.jpg" alt="The plotter, a large gray and black printer with a net">
+                    <p>Identify the Crestron control panel. It is a touch-screen device on the teacher podium with
+                        various controls. Tap the "Local PC" option. This will cause the projector to power on and
+                        receive input from the computer. <strong>Please do not use the projector remote
+                            controller.</strong></p>
+                    <img src="../images/tutorials/projector/1-crestron.webp"
+                         alt="The Crestron unit has 5 options, with the Local PC option surrounded by a red square to draw attention to it in this tutorial">
                 </div>
 
                 <h4>Step 2</h4>
                 <div class="tutorial-item">
-                    <p>Open your PDF in Adobe Acrobat or Adobe Reader. If it asks you to sign in, use your
-                        ename@colostate.edu or another account. Adobe accounts are free.</p>
-                    <img src="../images/tutorials/plotter/1-acrobat.png" alt="Screenshot of Adobe Acrobat">
+                    <p>Identify the Windows key at the bottom left of the keyboard. Then identify the letter P key at
+                        the top right. Hold both at the same time to make the display options appear.</p>
+                    <img src="../images/tutorials/projector/2-win-p.webp"
+                         alt="A keyboard with the windows key and p key each surrounded by a red square for emphasis">
                 </div>
 
                 <h4>Step 3</h4>
                 <div class="tutorial-item">
-                    <p>Select the printer with the word "Plotter" in it from the menu.</p>
-                    <img src="../images/tutorials/plotter/2-select-printer.webp" alt="The Printer Selection menu">
+                    <p>Select a display option. <strong>Duplicate</strong> will cause the projector to show exactly the
+                        same thing as the computer monitor. <strong>Extend</strong> will cause the projector to act as a
+                        second monitor. If you choose Extend, you will have to drag your windows from one screen to the
+                        other.</p>
+                    <img src="../images/tutorials/projector/3-display-options.webp"
+                         alt="4 display options are shown at the right side of the screen, with the PC screen only option selected by default">
                 </div>
 
                 <h4>Step 4</h4>
                 <div class="tutorial-item">
-                    <p>Click on the "Properties" button near the top of the window. A window that looks like this will
-                        open up. Once it does, click on the "Custom..." button.</p>
-                    <img src="../images/tutorials/plotter/3-properties.webp"
-                         alt="Click on the Custom button in the Properties window">
-                </div>
-
-                <h4>Step 5</h4>
-                <div class="tutorial-item">
-                    <p>After clicking the "Custom..." button, a window will pop up where you can entire your desired
-                        width and height. The width must not exceed 36 inches, which is the physical width
-                        of the plotter paper. When you're done, click OK, then close the Properties window.</p>
-                    <img src="../images/tutorials/plotter/4-custom-size.webp"
-                         alt="Enter a custom size in the pop up window">
-                </div>
-
-                <h4>Step 6</h4>
-                <div class="tutorial-item">
-                    <p>Once you've selected the correct size, drag the speed/quality slider to the middle of the
-                        scale.</p>
-                    <img src="../images/tutorials/plotter/5-quality-slider.webp"
-                         alt="Drag the slider to the middle between speed and quality">
-                </div>
-
-                <h4>Step 7</h4>
-                <div class="tutorial-item">
-                    <p>Depending on your needs, you may need to select a scaling option under "Paper Size &
-                        Handling". If you need your document to print to-scale, select the "Actual Size" radio button.
-                        Otherwise, select the "Fit" radio button. Once you've selected an option, click the "Print"
-                        button.</p>
-                    <img src="../images/tutorials/plotter/6-scale-print.webp"
-                         alt="The two main options for scaling are fit and actual size">
-                </div>
-
-                <h4>Step 8</h4>
-                <div class="tutorial-item">
-                    <p>A Papercut dialog box will appear and ask you to confirm the print job. Verify the cost and
-                        number of pages, then click the "Print" button.</p>
-                    <img src="../images/tutorials/plotter/7-papercut.webp"
-                         alt="A green Papercut window allows you to confirm the cost and number of pages before printing">
+                    <p>Please turn off the projector when you are done.</p>
                 </div>
 
                 <h3 class="mb-1">That's it!</h3>
