add refund tutorial

--- a/tutorials/refunds.html
+++ b/tutorials/refunds.html
@@ -72,69 +72,48 @@
         </aside>
         <main>
             <h2>Using the Plotter</h2>
-            <p>This article shows how to use the plotter printer, step by step.</p>
+            <p>This article shows how to request a refund using the Papercut print credit system. Refunds will take a
+                few days to process.</p>
             <div id="tutorial">
                 <h4>Step 1</h4>
                 <div class="tutorial-item">
-                    <p>Identify the plotter. Make sure it is powered on by tapping the screen. If it wakes up, move onto
-                        step 2. Otherwise, push the power button, wait a few minutes, and try again.</p>
-                    <img src="../images/rdc-plotter.jpg" alt="The plotter, a large gray and black printer with a net">
+                    <p>Identify the Papercut window at the top right corner of the window. Click on the "Details..."
+                        link.</p>
+                    <img src="../images/tutorials/refunds/1-balance.webp"
+                         alt="The papercut window shows a balance of 2.70 and a Details link">
                 </div>
 
                 <h4>Step 2</h4>
                 <div class="tutorial-item">
-                    <p>Open your PDF in Adobe Acrobat or Adobe Reader. If it asks you to sign in, use your
-                        ename@colostate.edu or another account. Adobe accounts are free.</p>
-                    <img src="../images/tutorials/plotter/1-acrobat.png" alt="Screenshot of Adobe Acrobat">
+                    <p>Log into the Papercut system using your ename and password. These are the same credentials you
+                        use to log into RamWeb, Canvas, and the CHHS computer lab machines.</p>
+                    <img src="../images/tutorials/refunds/2-log-in.webp"
+                         alt="The Papercut login interface asks for a username and password">
                 </div>
 
                 <h4>Step 3</h4>
                 <div class="tutorial-item">
-                    <p>Select the printer with the word "Plotter" in it from the menu.</p>
-                    <img src="../images/tutorials/plotter/2-select-printer.webp" alt="The Printer Selection menu">
+                    <p>The left side of the screen will have a dark navigation menu. Click on the "Recent Print Jobs"
+                        link. It is the 4th from the bottom.</p>
+                    <img src="../images/tutorials/refunds/3-recent-print-jobs.webp"
+                         alt="A dark sidebar menu with a Recent Print jobs link">
                 </div>
 
                 <h4>Step 4</h4>
                 <div class="tutorial-item">
-                    <p>Click on the "Properties" button near the top of the window. A window that looks like this will
-                        open up. Once it does, click on the "Custom..." button.</p>
-                    <img src="../images/tutorials/plotter/3-properties.webp"
-                         alt="Click on the Custom button in the Properties window">
+                    <p>On the Recent Print Jobs screen, you will see a table with all of your recent print jobs. To
+                        request a refund, click on the "request refund" link.</p>
+                    <img src="../images/tutorials/refunds/4-jobs-hover.webp"
+                         alt="A table of print jobs with the request refund link">
                 </div>
 
                 <h4>Step 5</h4>
                 <div class="tutorial-item">
-                    <p>After clicking the "Custom..." button, a window will pop up where you can entire your desired
-                        width and height. The width must not exceed 36 inches, which is the physical width
-                        of the plotter paper. When you're done, click OK, then close the Properties window.</p>
-                    <img src="../images/tutorials/plotter/4-custom-size.webp"
-                         alt="Enter a custom size in the pop up window">
-                </div>
-
-                <h4>Step 6</h4>
-                <div class="tutorial-item">
-                    <p>Once you've selected the correct size, drag the speed/quality slider to the middle of the
-                        scale.</p>
-                    <img src="../images/tutorials/plotter/5-quality-slider.webp"
-                         alt="Drag the slider to the middle between speed and quality">
-                </div>
-
-                <h4>Step 7</h4>
-                <div class="tutorial-item">
-                    <p>Depending on your needs, you may need to select a scaling option under "Paper Size &
-                        Handling". If you need your document to print to-scale, select the "Actual Size" radio button.
-                        Otherwise, select the "Fit" radio button. Once you've selected an option, click the "Print"
-                        button.</p>
-                    <img src="../images/tutorials/plotter/6-scale-print.webp"
-                         alt="The two main options for scaling are fit and actual size">
-                </div>
-
-                <h4>Step 8</h4>
-                <div class="tutorial-item">
-                    <p>A Papercut dialog box will appear and ask you to confirm the print job. Verify the cost and
-                        number of pages, then click the "Print" button.</p>
-                    <img src="../images/tutorials/plotter/7-papercut.webp"
-                         alt="A green Papercut window allows you to confirm the cost and number of pages before printing">
+                    <p>Once you click on the "request refund" link, you will be taken to a screen where you can enter
+                        the amount of the refund and the reason for it. Please enter what happened in the text box, then
+                        click submit.</p>
+                    <img src="../images/tutorials/refunds/5-submit.webp"
+                         alt="A form with amount and reason and submit button">
                 </div>
 
                 <h3 class="mb-1">That's it!</h3>
