use new lab map

--- a/labs/index.html
+++ b/labs/index.html
@@ -55,24 +55,26 @@
     </nav>
     <div id="content">
         <aside>
-            <h5>Labs</h5>
-            <ul>
-                <li>
-                    <a href="education.html">Education 220</a>
-                </li>
-                <li>
-                    <a href="gifford.html">Gifford 317</a>
-                </li>
-                <li>
-                    <a href="moby.html">Moby B-219A</a>
-                </li>
-                <li>
-                    <a href="precon.html">Precon 200 & 201</a>
-                </li>
-                <li>
-                    <a href="rdc.html">RDC 104</a>
-                </li>
-            </ul>
+            <div class="sticky-top">
+                <h5>Labs</h5>
+                <ul>
+                    <li>
+                        <a href="education.html">Education 220</a>
+                    </li>
+                    <li>
+                        <a href="gifford.html">Gifford 317</a>
+                    </li>
+                    <li>
+                        <a href="moby.html">Moby B-219A</a>
+                    </li>
+                    <li>
+                        <a href="precon.html">Precon 200 & 201</a>
+                    </li>
+                    <li>
+                        <a href="rdc.html">RDC 104</a>
+                    </li>
+                </ul>
+            </div>
         </aside>
         <main>
             <h2>About our Computer Labs</h2>
