--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     Whether you’re a major in our college, a minor, or simply taking a class in one of our departments, you have access to our computer lab spaces and equipment.
                 </p>
                 <a href="images/lab-map.png" target="_blank">
-                    <img src="images/lab-map.png" alt="Map of the 5 CHHS labs on campus" />
+                    <img src="images/lab-map.webp" alt="Map of the 5 CHHS labs on campus" />
                 </a>
                 <div class="caption">The five computer labs in the College of Health and Human Sciences are circled in green.</div>
                 <p>
