image width and height

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
         <a href="index.html">
             <header>
-                <img src="images/logo.svg" alt="CHHS Labs Logo">
+                <img width="66" height="48" src="images/logo.svg" alt="CHHS Labs Logo">
                 <h1>CHHS Computer Labs</h1>
             </header>
         </a>
@@ -90,7 +90,7 @@
                     Whether you’re a major in our college, a minor, or simply taking a class in one of our departments, you have access to our computer lab spaces and equipment.
                 </p>
                 <a href="images/lab-map.png" target="_blank">
-                    <img src="images/lab-map.webp" alt="Map of the 5 CHHS labs on campus" />
+                    <img width="1000" height="699" src="images/lab-map.webp" alt="Map of the 5 CHHS labs on campus" />
                 </a>
                 <div class="caption">The five computer labs in the College of Health and Human Sciences are circled in green.</div>
                 <p>
