add gifford image

--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -82,7 +82,7 @@
             <h2>Gifford 317</h2>
             <p>Welcome to the Gifford 317 computer lab.
                 Located on the third floor of the Gifford building at 502 W Lake St, directly east of the Richardson Design Center Building, this lab serves students in Apparel Merchandising, Food Science and Human Nutrition, and Interior Architecture and Design majors.</p>
-            <p>[add pic of gifford]</p>
+            <img src="../images/gifford.webp" alt="The Gifford lab, with light brown desks and several rows of black computer screens in front of a light gray wall and a dark red wall">
             <p class="caption">The Gifford 317 lab has 99 computers available to students and a teacher podium with a projector screen.</p>
 
             <h4>Reservations</h4>
